nir: add pass for splitting dvec3/dvec4 ALU operations
This will be needed for double support in Intel's vec4 backend.

v2:
  - Move the pass from Intel to NIR. The lower_vec_to_movs generic pass
    in NIR needs to be adapted to work along with this pass. Also, other
    hardware platform might want to do something like this.

--- a/src/compiler/nir/Makefile.sources
+++ b/src/compiler/nir/Makefile.sources
@@ -64,6 +64,7 @@ NIR_FILES = \
 	nir_search.c \
 	nir_search.h \
 	nir_split_var_copies.c \
+	nir_split_doubles.c \
 	nir_sweep.c \
 	nir_to_ssa.c \
 	nir_validate.c \
