i965: Add boilerplate func for implementing QueryInternalFormat driver hook

--- a/src/mesa/drivers/dri/i965/Makefile.sources
+++ b/src/mesa/drivers/dri/i965/Makefile.sources
@@ -137,6 +137,7 @@ i965_FILES = \
 	brw_program.c \
 	brw_program.h \
 	brw_primitive_restart.c \
+	brw_queryformat.c \
 	brw_queryobj.c \
 	brw_reset.c \
 	brw_sampler_state.c \
